<resources>
    <string name="app_name">Sách</string>
    <string name="facebook_app_id">982539198779504</string>
    <string name="facebook_login_protocol_schema">fb982539198779504</string>
    <string name="hello_blank_fragment">ddd</string>
    <string name="string_internet_connection_not_available"> Không có kết nối internet!</string>
    <string name="thaydoingonngu"> Ngôn ngữ</string>
    <string name="chedotoi"> Chế độ tối</string>
    <string name="tatBatchedotoi"> Tắt/bật chế độ tối</string>
    <string name="thay_doi_ngon_ngu"> Thay đổi ngôn ngữ</string>
    <string name="chitet_mua"> Chi tiết</string>
    <string name="mota_ban"> Mô tả sách</string>
    <string name="cungtacgia_ban"> Sản phẩm cùng tác giả</string>
    <string name="danhgia_ban"> Đánh giá sản phẩm</string>
    <string name="tatca_ban"> Xem tất cả</string>
    <string name="mungay_ban"> Mua ngay</string>
    <string name="docsach"> Đọc sách</string>
    <string name="audio"> Audio</string>
    <string name="danhgia_doc"> Xem đánh giá của bạn </string>
    <string name="tenkhachhang"> Tên khách hàng </string>
    <string name="diachi"> Địa chỉ </string>
    <string name="sodienthoaikhach"> Số điện thoại </string>
    <string name="sanphammua"> Sản phẩm </string>
    <string name="thanhtoanhang"> Thanh toán </string>
    <string name="kientrama"> Kiểm tra </string>
    <string name="phuongthucvanchuyen"> Phương thức vận chuyển </string>
    <string name="tongtien"> Tổng tiền: 10 VND </string>
    <string name="tenkhachhangs"> Khách hàng : </string>
    <string name="diachis">Địa chỉ :</string>
    <string name="SDT">SĐT :</string>
    <string name="tongtiens">Tổng tiền :</string>
    <string name="tinhtranghang">Tình trạng :</string>
    <string name="xacnhandonhang">Xác nhận đơn hàng</string>
    <string name="sanphams">Sản phẩm :</string>
    <string name="gias">Giá :</string>
    <string name="soluongs">Số lượng :</string>
    <string name="them_sanpham">Thêm sản phẩm</string>
    <string name="hoadon">Hóa đơn</string>
    <string name="hoadonAdapter">Hóa đơn</string>
    <string name="dangnhap">ĐĂNG NHẬP</string>
    <string name="dangnhaps">Đăng nhập</string>
    <string name="ghinholuachon">Ghi nhớ</string>
    <string name="dangkytaikhoan">Chưa có tài khoản! Đăng ký ngay</string>
    <string name="giohang">Giỏ hàng</string>
    <string name="muahang">Mua hàng</string>
    <string name="trangcanhan">Trang cá nhân</string>
    <string name="ten">Tên</string>
    <string name="email">Email</string>
    <string name="dangxuat">Đăng xuất</string>
    <string name="quanlytaikhoan">Quản lý tài khoản</string>
    <string name="nhanxet">Nhận xét</string>
    <string name="dangkytaikhaon">ĐĂNG KÍ TÀI KHOẢN</string>
    <string name="dangky">Đăng ký</string>
    <string name="khongtimthaysach">Không tìm thấy sách</string>
    <string name="vanchuyen">Vận chuyển</string>
    <string name="donhang">Đơn hàng</string>
    <string name="lichsumua">Lịch sử mua hàng</string>
    <string name="choxacnhan">Chờ xác nhận</string>
    <string name="cholayhang">Chờ lấy hàng</string>
    <string name="danggiao">Đang giao</string>
    <string name="danhgia">Đánh giá</string>
    <string name="sachdathich">Sách đã thích</string>
    <string name="danhgiacutoi">Đánh giá của tôi</string>
    <string name="thietlaptaikhoan">Thiết lập tài khoản</string>
    <string name="caidatkhac">Cài đặt khác</string>
    <string name="giohangtrong">Giỏ hàng trống</string>
    <string name="thanhtoan">Thanh toán</string>
    <string name="tieptucmua"><![CDATA[Tiếp tục mua sản phẩm >>]]></string>
    <string name="bansachonline">Bán sách online</string>
    <string name="thanhvien">Thành viên :</string>
    <string name="chaomung">CHÀO MỪNG</string>
    <string name="denvoitusach">Đến với tủ sách của chúng tôi</string>
    <string name="batdaunao">Đắt đầu nào</string>
    <string name="theloai">Thể loại</string>
    <string name="truyenmoicapnhat">Truyện mới cập nhật</string>
    <string name="xemthem"><![CDATA[Xem thêm >>]]></string>
    <string name="nhaxuatban">Nhà xuất bản</string>
    <string name="tacgia">Tác giả</string>
    <string name="themdanhgia">Thêm đánh giá</string>
    <string name="xoa">Xóa</string>
    <string name="xemchitiet">Xem chi tiết</string>
    <string name="makm">Mã :</string>
    <string name="giam">Giảm :</string>
    <string name="ngaybd">NBĐ :</string>
    <string name="ngaykt">Ngày kết thúc</string>
    <string name="cuoc">cước</string>
    <string name="khuyenmaicucchat">Khuyến mãi cực chất!...</string>
    <string name="trangchu">Trang chủ</string>
    <string name="khuyenmai">Khuyến mãi</string>
    <string name="thuvien">Thư viện</string>
    <string name="thongbao">Thông báo</string>
    <string name="canhan">Cá nhân</string>
    <string name="nhapnhanxet">Nhập nhận xét</string>
    <string name="guinhanxet">Gửi nhận xét</string>
    <string name="xacnhantruoc">Xác nhận trước</string>
    <string name="chuyenditruoc">Chuyển đi trước </string>
    <string name="nhanhangtruoc">Nhận hàng trước</string>
    <string-array name="query_suggestions">
        <item>Doraemon tập 1</item>
        <item>Doraemon tập 2</item>
        <item>Lật đổ ông vua trì hoãn</item>
        <item>Khéo ăn nói sẽ có được thiên hạ</item>
        <item>Đời ngắn đừng ngủ dài</item>
    </string-array>
    <string name="ADMOB_APP_ID">ca-app-pub-4271678036251490~7420544422</string>
    <string name="ABMOB_ID_TEST_BANNER">ca-app-pub-3940256099942544/6300978111</string>
    <string name="dangnhap_sms">Đăng nhập bằng sms</string>
    <string name="maxac_nhan">Mã xác nhận</string>
    <string name="tatca_danhgia">Tất cả đánh giá</string>
    <string name="the_loai">Thể loại</string>
    <string name="danh_sach">Danh sách</string>
    <string name="chitiet_donhang">Chi tiết đơn hàng</string>
    <string name="chitiet_vanchuyen">Chi tiết vận chuyển</string>
    <string name="danhsach_yeuthich">Danh sách yêu thích</string>
    <string name="danhsach_trong">Danh sách trống</string>
    <string name="sach">Sách</string>
    <string name="xem_sachkhac">Xem sách khác</string>
    <string name="sachduoc_dexuat">Sách được đề xuất</string>
    <string name="sach_tacgiakhac">Sách của tác giả khác</string>
    <string name="congdong">Cộng đồng</string>
    <string name="den_thuvien">Đến thư viện</string>
    <string name="ve_trangchu">Trang chủ</string>
    <string name="gioitinh">Giới tính</string>
    <string name="ngaysinh">Ngày sinh</string>
    <string name="dienthoai">Thay đổi số điện thoại</string>
    <string name="thietlapngay">Thiết lập ngay</string>
    <string name="thaydoi_mk">Thiết lập ngay</string>
    <string name="dangky_tk">Đăng ký thành công</string>
    <string name="tentaik">Tên tài khoản</string>
    <string name="nhap_mk">Nhập mật khẩu</string>
    <string name="nhaplaimk">Nhập lại mật khẩu</string>
    <string name="tim_kiem">Tìm kiếm</string>
    <string name="cai_dat">Cài đặt</string>
    <string name="lienhe">Liên hệ:</string>
    <string name="ghe_tham">Ghé thăm</string>
    <string name="capnhat_thongtin">Cập nhật thông tin</string>
    <string name="ten_kh">Tên khách hàng</string>
    <string name="nam">Nam</string>
    <string name="nu">Nữ</string>
    <string name="sodienthoai">Số điện thoai</string>
    <string name="tiep_tuc">Tiếp tục</string>
    <string name="soluong">Số lượng</string>
    <string name="mua_ngay">Mua ngay</string>
    <string name="nhap_sodt">Nhập số điện thoại của bạn</string>
    <string name="tieptuc">Tiếp tục</string>
    <string name="vuilong_doi">Vui lòng đợi</string>
    <string name="nhapma_xacnhan">Nhập mã xác nhận</string>
    <string name="hoan_thanh">Hoàn thành đơn hàng</string>
    <string name="cungcap">Vui lòng cung cấp số điện thoại của bạn</string>
    <string name="thietlap">Thiết lập</string>
    <string name="tong_thanhtoa">Tổng thanh toán :</string>
    <string name="chuaco_donhang">Chưa có đơn hàng</string>
    <string name="timkiem_ganday">Tìm kiếm gần đây và đề xuất</string>
    <string name="tusach_cuatoi">Tủ sách của tôi</string>
    <string name="chuaco_sachthuvien">Chưa có sách trong thư viện</string>
    <string name="capnhatdonhang">Cập nhật đơn hàng</string>
    <string name="chua_baonao">Chưa có thông báo nào!</string>
    <string name="uudai">Ưu đãi</string>
    <string name="timkiem">Tìm kiếm sách</string>
    <string name="luu">Save</string>
    <string name="chiase">Chia sẻ</string>
    <string name="sanpham_lq">Sách liên quan</string>
    <string name="themvao_gh">Thêm vào giỏ</string>
    <string name="vuilongnhap">Vui lòng nhập email</string>
    <string name="nhappasss">Vui lòng nhập mật khẩu</string>
    <string name="dangnhaptc">Đăng nhập thành công!</string>
    <string name="saitk_mk">Sai tài khoản hoặc mật khẩu!</string>
    <string name="chuadk_sdtnay">Bạn chưa đăng ký số điện thoại này</string>
    <string name="thanhcon">Đăng nhập thành công!</string>
    <string name="banmuonhuy">Bạn muốn hủy thay đổi?</string>
    <string name="luuthanhcog">Lưu thành công!</string>
    <string name="nhapdaydutt">Vui lòng nhập đầy đủ thông tin</string>
    <string name="muoikt">Tên không quá 10 kí tự</string>
    <string name="emaildung">Nhập một email đúng</string>
    <string name="quangnvaktdb">Mật khẩu quá ngắn hoặc phải có kí tự đặc biệt</string>
    <string name="mkkhongkhop">mật khẩu không khớp</string>
    <string name="thanhcong">Thành công</string>
    <string name="dkthanhcong">Đăng ký thành công</string>
    <string name="dkthatbai">Đăng ký thất bại</string>
    <string name="tktontai">Tài  khoản đã tồn tại!</string>
    <string name="nhapsohl">Vui lòng nhập số hợp lệ</string>
    <string name="so">Số</string>
    <string name="chuadk">chưa được đăng ký!</string>
    <string name="kokm">Không có khuyến mãi</string>
    <string name="hople">Hợp lệ</string>
    <string name="kottai">Mã không tồn tại</string>
    <string name="chuanhapma">Bạn chưa nhập mã</string>
    <string name="nhaptenkh">Vui lòng nhập tên khách hàng</string>
    <string name="nhapsdt">Vui lòng nhập địa chỉ</string>
    <string name="nhapsdtd">Vui lòng nhập số điện thoại</string>
    <string name="bancomuonttk">Bạn có muốn thanh toán đơn hàng này không</string>
    <string name="dathang">Đặt hàng</string>
    <string name="giaohangtk">Giao hàng tiết kiệm</string>
    <string name="giaohangnh">Giao hàng nhanh</string>
    <string name="GHsieutoc">Giao hàng siêu tốc</string>
    <string name="xemdonhangcuabna">Xem đơn hàng của bạn</string>
    <string name="choxuly">Chờ xử lý đơn hàng</string>
    <string name="themtcdh">Thêm thành công hóa đơn:</string>
    <string name="donhangdangchoxl">Đơn hàng đang được xử lý</string>
    <string name="adumakhe">adumankhe2@gmail.com</string>
    <string name="vuilongnhapshl">Vui lòng nhập số hợp lệ</string>
    <string name="vuilongnhapdd">Nhập đầy đủ thông tin</string>
    <string name="vuilongcho">Vui lòng chờ trong khi chúng tôi gửi mã cho bạn</string>
    <string name="nhapmakm">Nhập mã khuyến mãi</string>
    <string name="tongthanhtoan">Tổng thanh toán</string>
    <string name="thaydoimatkhau">Thay đổi mật khẩu</string>
    <string name="capnhatthongtin">Cập nhật thông tin</string>
    <string name="nhapsodient">Nhập số điện thoại của bạn?</string>
    <string name="nhanmakhuyenmai"><![CDATA[Nhận mã khuyến mãi >>]]></string>
    <string name="togtiens">Tổng tiền :</string>
    <string name="choxacnhans">Chờ Xác Nhận</string>
    <string name="dangvanchuyen">Đang vận chuyển</string>
    <string name="donhangdangducsl">Đơn hàng đang được xử lý</string>
    <string name="nhanthemdethoat">Nhấn thêm lần nữa để thoát!</string>
    <string name="co">Có</string>
    <string name="quay_lai">Quay lại</string>
    <string name="matkhaumoi">Mật khẩu mới</string>
    <string name="nhaplaimkmoi">Nhập lại mật khẩu mới</string>
    <string name="doimatkhau">Đổi mật khẩu</string>
</resources>