<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/nav_home"
        android:iconTint="?attr/textcolor"
        android:icon="@drawable/ic_home_black_24dp"
        android:title="@string/trangchu"/>
    <item
        android:id="@+id/nav_library"
        android:icon="@drawable/icon_tag"
        android:iconTint="?attr/textcolor"
        android:title="@string/khuyenmai"/>

    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_library_books_black_24dp"
        android:iconTint="?attr/textcolor"
        android:title="@string/thuvien"
        android:titleCondensed="#555"/>
    <item
        android:id="@+id/nav_notif"
        android:icon="@drawable/ic_notifications"
        android:iconTint="?attr/textcolor"
        android:title="@string/thongbao"
        android:titleCondensed="#555"/>
    <item
        android:id="@+id/nav_profile"
        android:icon="@drawable/ic_person"
        android:iconTint="?attr/textcolor"
        android:title="@string/canhan"/>
</menu>