<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="?attr/buttoncolor"
    android:padding="10dp"
    tools:context=".LoginRegister.LoginActivity">
    <de.hdodenhof.circleimageview.CircleImageView
        android:visibility="gone"
        android:id="@+id/cicler_logo"
        android:src="@drawable/book"
        android:layout_width="match_parent"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp"
        android:layout_height="100sp" />

    <LinearLayout
        android:padding="30dp"
        android:gravity="center"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <TextView
            android:textColor="#3F51B5"
            android:textStyle="bold"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/dangnhap"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/layout1"
        android:layout_marginTop="30dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/edtEmailLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/email"
            android:background="@drawable/rounded_edittext"
            android:padding="5dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:id="@+id/layout2"
        android:layout_below="@id/layout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/edtPasswordLogin"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:hint="@string/nhappasss"
            android:inputType="textPassword"
            android:background="@drawable/rounded_edittext"
            android:padding="5dp"
            />
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/loading_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:visibility="gone"/>
    <Button
        android:id="@+id/btn_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/dangnhaps"
        android:background="@drawable/cutomsbtn"
        android:textColor="#fff"
        android:layout_marginTop="20dp"
        android:layout_below="@id/layout2"/>
    <CheckBox
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/layout2"
        android:layout_alignParentRight="true"
        android:textColor="#E91E63"
        android:layout_marginTop="10dp"
        android:text="@string/ghinholuachon"
        android:backgroundTint="?attr/backgroundcolor"
        android:id="@+id/cbRemember"/>
        <Button
            android:id="@+id/btnSmsLogin"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:text="@string/dangnhap_sms"
            android:textColor="?attr/textcolor"
            android:background="#69CC8A"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_margin="20dp"
            android:padding="10dp"
            android:onClick="loginsms"
            android:drawableLeft="@drawable/ic_sms"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"/>
    <TextView
        android:id="@+id/link_register"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dangkytaikhoan"
        android:textColor="#3F51B5"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:onClick="regis"
        android:textSize="18dp"
        android:layout_marginBottom="20dp"/>
    </LinearLayout>
</RelativeLayout>