<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor"
    tools:context=".LoginRegister.SettingsActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_setting"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="?attr/textcolor"
            android:background="?attr/topbottomcolor"
            app:title="@string/cai_dat"
            app:navigationIcon="@drawable/ic_close"
            />
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/cardbackground"
        android:padding="10dp">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="?attr/cardbackground"
            android:padding="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/tatBatchedotoi"
                android:textColor="?attr/textcolor"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <Switch
                android:id="@+id/mySwitch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/chedotoi"
                android:textColor="?attr/textcolor"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/thaydoingonngu"
                android:textColor="?attr/textcolor"
                android:layout_marginTop="10dp"
                android:textStyle="bold"
                android:textSize="20dp"/>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="left"
                    android:textSize="15dp"
                    android:onClick="showChangeLanguageDialog"
                    android:layout_weight="1"
                    android:textColor="?attr/textcolor"
                    android:text="@string/thay_doi_ngon_ngu"/>
                <TextView
                    android:id="@+id/txtChangeLang"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:gravity="right"
                    android:textSize="15dp"
                    android:textStyle="bold"
                    android:textColor="?attr/textcolor" />
            </LinearLayout>

        </LinearLayout>
    </androidx.cardview.widget.CardView>
    </LinearLayout>
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom">
        <TableRow>
            <TextView
                android:text="@string/lienhe"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"/>
            <TextView
                android:text="0333756922"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_weight="1"
                android:textColor="?attr/textcolor"
                android:padding="5dp"
                android:autoLink="phone"
                android:drawableRight="@drawable/ic_local_phone"
                />
        </TableRow>
        <TableRow>
            <TextView
                android:text="@string/ghe_tham"
                android:textColor="?attr/textcolor"
                android:textSize="20dp"/>
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="bansachonline.xyz"
                android:drawableRight="@drawable/ic_web"
                android:padding="5dp"
                android:gravity="center"
                android:textSize="20dp"
                android:layout_weight="1"
                android:textColor="?attr/textcolor"
                android:autoLink="web"
                />
        </TableRow>
    </TableLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>