<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/backgroundcolor"
    tools:context=".LoginRegister.DoiMatkhauActivity">
    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_doimk"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="?attr/topbottomcolor"
            app:title="@string/quay_lai"
            app:navigationIcon="@drawable/ic_vector_back"/>
    </com.google.android.material.appbar.AppBarLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:padding="10dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edtEmailRE"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:hint="@string/email" />
    </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:padding="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/edtPasswordRE"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="?attr/textcolor"
                android:inputType="textPassword"
                android:background="@drawable/rounded_edittext"
                android:hint="@string/nhappasss" />
        </com.google.android.material.textfield.TextInputLayout>
            <Button
                android:id="@+id/buttonTieptuc"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textColor="?attr/textcolor"
                android:background="?attr/buttoncolor"
                android:drawableRight="@drawable/ic_chevron_right"
                android:layout_marginTop="11dp"
                android:padding="10dp"
                android:text="@string/tieptuc" />

</LinearLayout>