<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="?attr/buttoncolor"
    tools:context=".LoginRegister.RegisterActivity">
    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbarDangky"
        app:navigationIcon="@drawable/ic_close"
        app:title="@string/dangky"
        android:background="?attr/topbottomcolor"
        app:titleTextColor="?attr/textcolor"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="top"/>


    <LinearLayout
        android:padding="30dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <TextView
            android:textColor="#3F51B5"
            android:textStyle="bold"
            android:layout_marginTop="30dp"
            android:gravity="center"
            android:textSize="30dp"
            android:text="@string/dangkytaikhaon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/edtName"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/ten"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:background="@drawable/rounded_edittext"
                android:padding="5dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:hint="@string/email"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:background="@drawable/rounded_edittext"
                android:padding="5dp"
                />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="10dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:passwordToggleEnabled="true">
            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:inputType="textPassword"
                android:hint="@string/nhap_mk"
                android:textColor="?attr/textcolor"
                android:textColorHint="?attr/textcolor"
                android:background="@drawable/rounded_edittext"
                android:padding="5dp"
                />
        </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.textfield.TextInputLayout
        android:layout_marginTop="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true">
        <EditText
            android:id="@+id/edtC_Password"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:inputType="textPassword"
            android:hint="@string/nhaplaimk"
            android:background="@drawable/rounded_edittext"
            android:padding="5dp"
            />
    </com.google.android.material.textfield.TextInputLayout>
        <Button
            android:id="@+id/btnRegister"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="?attr/textcolor"
            android:textColorHint="?attr/textcolor"
            android:background="@drawable/cutomsbtn"
            android:layout_marginTop="20dp"
            android:text="@string/dangky"/>
    <ProgressBar
        android:id="@+id/loading"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30sp"
        android:textColor="?attr/textcolor"
        android:textColorHint="?attr/textcolor"
        android:visibility="gone"
        />

    </LinearLayout>
</LinearLayout>