<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".LoginRegister.NewPasswordActivity">

    <com.google.android.material.textfield.TextInputLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="36dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:hint="@string/matkhaumoi" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:padding="10dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="1dp"
        tools:layout_editor_absoluteY="250dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/enterReNewPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/rounded_edittext"
            android:inputType="textPassword"
            android:hint="@string/nhaplaimkmoi" />
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/buttonRepass"
        android:layout_gravity="center"
        android:padding="10dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/doimatkhau"
        android:layout_marginTop="10dp"
        android:background="?attr/buttoncolor"
        android:textColor="?attr/textcolor"
        tools:layout_editor_absoluteX="138dp"
        tools:layout_editor_absoluteY="441dp" />
</LinearLayout>